--- a/UX Offical/CSS/homepage.css
+++ b/UX Offical/CSS/homepage.css
@@ -1,65 +1,61 @@
 
-.bigimage{
-  
-  
 
-  
+.searchbarcontainer{
+    background-color:black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 100px;
+    width: 60%;  
+    position: absolute;
+    margin-top: -500px;
+    padding: 40px;
+    margin-left: 380px;
+    opacity: .5;
+    
 }
-.bigimage im{
-    object-fit: cover;
-    width:1000px;
-    height: 500px;
-}
-
-
-.searchbar{
-    position: relative;
-    bottom: 280px;
-    left: 570px;
-    right: 650px;
-    display: inline-block;
-}
-.searchbar input {
-    height: 30px;
-    width: 250px;
-}
-
-.flex{
-    max-inline-size: 100%;
-  block-size: auto;
-  aspect-ratio: 2/1;
-  object-fit: cover;
-  object-position: top center;
-  margin-left: 400px;
-} 
-.aboutus{
-    background-color:#F4F5EF;
-    width: 100%;
-    height: 52%;
+.searchbarcontainer input{
+    display: flex;
    
 }
+@media screen and (max-width: 768px){
+    .searchbarcontainer{
+        position: absolute;
+        margin-top: -180px;
+        padding: 40px;
+        margin-left:0px;
+        margin-right: 100px;
+        font-size: 15px;
+        opacity: .5;
+    }
+}
+@media screen and (max-width: 1024px){
+    .searchbarcontainer{
+        margin-left: 100px;
+    }
+}
+.searchbarcontainer label{
+    color: white;
+}
+.aboutus{
+    background-color:#F4F5EF;
+    display: flex; /*Enables flexible layout option*/
+    align-items: center; /*item will wrap into a new line whn reaching to end of container*/
+    justify-content: center; /*Align items along main axis and centers with the main container*/
+    padding: 120px;
+    margin-top:0px;
+}
 .aboutus img{
-    border-style: solid;
-    border-width: 1px;
-    margin-top: 40px;
-    left: 50px;
-    top:0px;
-    height: 300px;
-    width: 500px;
-    position: relative;
-    margin-top: 50px;
-    margin-left: 50px;
+    max-width: 100%;
+    max-height:100%;
+    padding-left: 30px;
 
 }
 
 .paragraph{
     font-size: 20px;
-    text-align:center;
-    width: 50%;
-    float:right;
-    height:50%;
-    margin-top: 50px;
-    padding-right:80px;    
+    padding-left: 20px;
+    
 }
 
 .aboutus button{
