--- a/UX Offical/CSS/homepage.css
+++ b/UX Offical/CSS/homepage.css
@@ -7,32 +7,43 @@
     justify-content: center;
     padding: 100px;
     width: 60%;  
+    max-width: 70%;
     position: absolute;
-    margin-top: -500px;
-    padding: 40px;
-    margin-left: 380px;
-    opacity: .5;
+    margin-top: -450px;
+    padding: 30px;
+    margin-left: 360px;
+    opacity: .6;
     
+}
+
+.searchbarcontainer button{
+    margin-left: 1px;
+    height: 43px;
+    width: 50px;
+    border-left: none;
+    cursor: pointer; background: #2196F3;
 }
 .searchbarcontainer input{
     display: flex;
+    
    
 }
 @media screen and (max-width: 768px){
     .searchbarcontainer{
-        position: absolute;
-        margin-top: -180px;
-        padding: 40px;
-        margin-left:0px;
-        margin-right: 100px;
-        font-size: 15px;
-        opacity: .5;
+        margin-top: -120px;
+        display: block;
+        justify-content: center;
+        padding-right: 10px;
+    }
+    .searchbarcontainer label{
+       
     }
 }
 @media screen and (max-width: 1024px){
     .searchbarcontainer{
         margin-left: 100px;
     }
+
 }
 .searchbarcontainer label{
     color: white;
@@ -42,7 +53,7 @@
     display: flex; /*Enables flexible layout option*/
     align-items: center; /*item will wrap into a new line whn reaching to end of container*/
     justify-content: center; /*Align items along main axis and centers with the main container*/
-    padding: 120px;
+    padding: 0px;
     margin-top:0px;
 }
 .aboutus img{
