--- a/UX Offical/CSS/Resturant.css
+++ b/UX Offical/CSS/Resturant.css
@@ -1,3 +1,14 @@
+.HeaderPic{
+
+  width: auto;
+  overflow: hidden;
+  height:400px;
+    
+  background-image:url("ImageNVideo/ResturantBG.jpg");
+  background-position:center ;
+  background-size: 100%;
+  background-repeat: no-repeat;
+}
 
 
 
