--- a/UX Offical/CSS/Resturant.css
+++ b/UX Offical/CSS/Resturant.css
@@ -4,9 +4,9 @@
   height: auto;
   overflow: hidden;
   /* height:400px; */
-    
-  background-image:url("ImageNVideo/ResturantBG.jpg");
-  background-position:center ;
+
+  background-image:url("");
+  background-position:center;
   background-size: 100%;
   background-repeat: no-repeat;
 }
