--- a/UX Offical/CSS/Resturant.css
+++ b/UX Offical/CSS/Resturant.css
@@ -1,3 +1,11 @@
+.Header{
+  width: 100%;
+  height: 400px;
+  overflow: hidden;
+  border: 1px solid black;
+}
+
+
 .TitleOnPic{
 
   width: 100%;
@@ -5,7 +13,7 @@
   overflow: hidden;
   /* height:400px; */
 
-  background-image:url("");
+  background-image:url("ImageNVideo/ResturantBG.jpg");
   background-position:center;
   background-size: 100%;
   background-repeat: no-repeat;
