--- a/UX Offical/CSS/Resturant.css
+++ b/UX Offical/CSS/Resturant.css
@@ -1,24 +1,15 @@
 .Header{
   width: 100%;
-  height: 400px;
-  overflow: hidden;
-  border: 1px solid black;
-}
-
-
-.TitleOnPic{
-
-  width: 100%;
   height: auto;
   overflow: hidden;
-  /* height:400px; */
-
-  background-image:url("ImageNVideo/ResturantBG.jpg");
-  background-position:center;
-  background-size: 100%;
-  background-repeat: no-repeat;
+  border: 1px solid black;
+  background-image:url("/ImageNVideo/ResturantBG.jpg");
 }
 
+
+.HeaderIMG{
+
+}
 
 
 
