--- a/UX Offical/CSS/Resturant.css
+++ b/UX Offical/CSS/Resturant.css
@@ -1,13 +1,40 @@
 .Header{
   width: 100%;
-  height: auto;
+  height: 500px;
   overflow: hidden;
   border: 1px solid black;
 }
 
 
 .HeaderIMG{
+  width: 100%;
+  height: auto;
+}
 
+.PicTitle{
+  position: absolute;
+  font-size: 10em;
+  font-weight: bold;
+  color: white;
+  top: 30%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  
+}
+
+
+@media screen and (max-width: 1024px){
+  .PicTitle{
+    
+    font-size: 10em;
+  }
+}
+
+@media screen and (max-width: 768px){
+  .PicTitle{
+    top:20%;
+    font-size: 30px;
+  }
 }
 
 
