--- a/UX Offical/CSS/Resturant.css
+++ b/UX Offical/CSS/Resturant.css
@@ -1,26 +1,24 @@
 .Header{
   width: 100%;
-  height: 500px;
+  height: auto;
   overflow: hidden;
-  border: 1px solid black;
 }
 
 
 .HeaderIMG{
   width: 100%;
   height: auto;
-  background-image: url("2ndResturantBG.jpg");
+  
 }
 
 .PicTitle{
-
+  position: absolute;
   font-size: 10em;
   font-weight: bold;
   color: white;
   top: 30%;
   left: 50%;
   transform: translate(-50%, -50%);
-  
 }
 
 
