--- a/UX Offical/CSS/Resturant.css
+++ b/UX Offical/CSS/Resturant.css
@@ -11,15 +11,27 @@
   
 }
 
-.PicTitle{
-  position: absolute;
-  font-size: 10em;
-  font-weight: bold;
-  color: white;
-  top: 30%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+
+.ResturantIntro{
+  width: 100%;
+  height: auto;
+  border: 2px solid black;
+  text-align: center;
+  font-size: 20px;
 }
+
+
+.Resturant_Border{
+  width: 45%;
+  margin: auto;
+  border-bottom: 3px solid black;
+}
+.WelcomeResturant{
+  font-size: 40px;
+  font-weight: bold;
+  text-align: center;
+}
+
 
 
 @media screen and (max-width: 1024px){
@@ -29,10 +41,10 @@
 }
 
 @media screen and (max-width: 768px){
-  .PicTitle{
-    top:20%;
-    font-size: 30px;
+  .WelcomeResturant{
+    font-size: 25;
   }
+
 }
 
 
