--- a/UX Offical/CSS/Resturant.css
+++ b/UX Offical/CSS/Resturant.css
@@ -15,7 +15,7 @@
 .ResturantIntro{
   width: 100%;
   height: auto;
-  border: 2px solid black;
+  /* border: 2px solid black; */
   text-align: center;
   font-size: 20px;
 }
@@ -56,3 +56,35 @@
 } */
 
 
+
+
+body {
+  font-family: sans-serif;
+  background-color: #ffffff;
+}
+
+.card-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.card {
+  width: 200px;
+  margin: 0 10px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  box-shadow: 0 1px 3px #ccc;
+}
+
+.card img {
+  width: 100%;
+}
+
+.card h2 {
+  font-size: 1.5em;
+}
+
+.card p {
+  font-size: 1em;
+}
