--- a/UX Offical/CSS/Resturant.css
+++ b/UX Offical/CSS/Resturant.css
@@ -67,10 +67,13 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  margin: 30px 30px;
 }
 
 .card {
-  width: 200px;
+  text-align: center;
+  padding: 10px;
+  width: 300px;
   height: auto;
   margin: 0 10px;
   padding: 10px;
