--- a/UX Offical/CSS/Resturant.css
+++ b/UX Offical/CSS/Resturant.css
@@ -42,7 +42,7 @@
 
 @media screen and (max-width: 768px){
   .WelcomeResturant{
-    font-size: 25;
+    font-size: 25px;
   }
 
 }
@@ -72,11 +72,10 @@ body {
 
 .card {
   text-align: center;
-  padding: 10px;
+  padding: 25px 10px 25px 10px;
   width: 300px;
   height: auto;
   margin: 0 10px;
-  padding: 10px;
   border: 1px solid #ccc;
   box-shadow: 0 1px 3px #ccc;
 }
