--- a/UX Offical/CSS/Resturant.css
+++ b/UX Offical/CSS/Resturant.css
@@ -2,10 +2,14 @@
   width: 100%;
   height: auto;
   overflow: hidden;
+
 }
 
-.Header p{
-  
+h1{
+  text-align: center;
+  /* position: absolute;
+  top: 20%;
+  left:49%; */
 }
 
 .HeaderIMG{
