--- a/UX Offical/CSS/homepage.css
+++ b/UX Offical/CSS/homepage.css
@@ -1,4 +1,6 @@
-
+.bigimage{
+    max-height:61vh;
+}
 .arrow-button {
     display: inline-block;
     border: 1px solid white;
@@ -70,7 +72,7 @@
 
 @media screen and (max-width: 768px){
     .searchbarcontainer{
-        margin-top: -158px;
+        margin-top: -200px;
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
@@ -79,7 +81,7 @@
         padding: 15px;
         width: 80%;
        
-       
+    
         
     }
     .searchbarcontainer input{
@@ -99,6 +101,9 @@
        flex-wrap: wrap;
         position: relative;
         display: block;
+    }
+    .bigimage{
+        height:30vh;
     }
     .aboutus img{
         
