--- a/UX Offical/CSS/homepage.css
+++ b/UX Offical/CSS/homepage.css
@@ -28,7 +28,8 @@
     justify-content: center;
     width: 60%;  
     max-width: 70%;
-    position: absolute;
+    position: relative;
+    overflow: hidden;
     margin-top: -200px;
     padding:20px;
     margin-left: 300px;
