--- a/UX Offical/CSS/Resturant.css
+++ b/UX Offical/CSS/Resturant.css
@@ -6,18 +6,20 @@
 
 .Header h1{
   position: absolute;
-  top: 20%;
+  top: 25%;
   left: 50%;
   transform: translate(-50%, -50%);
+  color: white;
 }
 
 .HeaderIMG{
   width: 100%;
   height: auto;
-  
 }
 
-
+.Container_ALL{
+  align-content: center;
+}
 
 .ResturantIntro{
   width: 100%;
@@ -33,11 +35,6 @@
   margin: auto;
   border-bottom: 3px solid black;
 }
-.WelcomeResturant{
-  font-size: 40px;
-  font-weight: bold;
-  text-align: center;
-}
 
 
 
@@ -45,13 +42,18 @@
   .PicTitle{
     font-size: 10em;
   }
+  .Title.active{
+    display: none;
+  }
 }
 
 @media screen and (max-width: 768px){
   .WelcomeResturant{
     font-size: 25px;
   }
-
+  .Title.active{
+    display: none;
+  }
 }
 
 
