--- a/UX Offical/CSS/homepage.css
+++ b/UX Offical/CSS/homepage.css
@@ -74,13 +74,10 @@
     .searchbarcontainer{
         margin-top: -350px;
         display: flex;
-        
         padding-right: 10px;
         right: 70px;
         padding: 10px;
         width: 80%;
-       
-        
     }
     .bigimage img{
         height: 50%;
@@ -91,7 +88,6 @@
         font-size: 16px;
         margin-top: -30px;
         margin-left: 30px;
-
     }
     .incontainer{
         margin-top: -55px;
@@ -128,7 +124,19 @@
         margin-right: 100px;
         padding-top:30px;
     }
-}
+    .eventsContainer{
+        flex-wrap: wrap;
+        display: block;
+        text-align: center;
+        justify-content: center;
+        width: 100%;
+    }
+    .eventsContainer p{
+        width: 100%;
+        text-align:center ;
+    }
+    }
+    
 @media screen and (max-width: 1024px){
     .searchbarcontainer{
         margin-left: 100px;
@@ -157,6 +165,7 @@
     text-align: left;
     
 }
+
 .aboutus button{
     color: black;
     text-decoration: none;
@@ -235,10 +244,61 @@
 }
 .eventsContainer{
     display: flex;     /*Enables flexible layout option*/
-    text-align: left;
     align-items: center; /*item will wrap into a new line whn reaching to end of container*/
     justify-content: center; /*Align items along main axis and centers with the main container*/
     padding: 40px;
-    margin-top:50px;
     background-color: white;
+}
+.eventsContainer{
+    margin-right: 530px;
+}
+.eventsCard1{
+    display: inline-block;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    width: 20%;
+    border-radius: 5px;
+    background-color: white;
+    vertical-align: bottom;
+    margin-left: 200px;
+    margin-top: 80px;
+}
+.eventsCard1:hover{
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+.eventsContainer img{
+    border-radius: 5px 5px 0 0;
+}
+
+.flexcontainer{
+    margin-left: 300px;
+   
+}   
+.minicontainer{
+    text-align: center;
+    padding:10px;
+}
+
+.eventsCard2{
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    width: 20%;
+    border-radius: 5px;
+    background-color: white;
+    vertical-align: bottom;
+    margin-left: 100px;
+    margin-top: 80px;
+}
+.cardcontainer{
+    display: flex;
+}
+.eventsCard3{
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    width: 20%;
+    border-radius: 5px;
+    background-color: white;
+    vertical-align: bottom;
+    margin-left: 100px;
+    margin-top: 80px;
 }
