--- a/UX Offical/CSS/Resturant.css
+++ b/UX Offical/CSS/Resturant.css
@@ -10,6 +10,8 @@
   left: 50%;
   transform: translate(-50%, -50%);
   color: white;
+  padding-left: 15px;
+  border-left: white 3px solid;
 }
 
 .HeaderIMG{
@@ -19,40 +21,33 @@
 
 .Container_ALL{
   align-content: center;
-}
-
-.ResturantIntro{
-  width: 100%;
-  height: auto;
-  /* border: 2px solid black; */
   text-align: center;
-  font-size: 20px;
 }
 
-
-.Resturant_Border{
-  width: 45%;
-  margin: auto;
-  border-bottom: 3px solid black;
-}
 
 
 
 @media screen and (max-width: 1024px){
-  .PicTitle{
-    font-size: 10em;
+  .Header h1{
+    font-size: 60px;
   }
   .Title.active{
     display: none;
+    animation-name: move;
+    animation-delay: 0.5s;
+    animation-duration: 1s;
+    animation-fill-mode: forwards;
   }
+
 }
 
 @media screen and (max-width: 768px){
-  .WelcomeResturant{
-    font-size: 25px;
+  .Header h1{
+    font-size: 40px;
   }
   .Title.active{
     display: none;
+    transition: transform 0.5s ease-in;
   }
 }
 
@@ -67,22 +62,22 @@
 
 
 
-body {
+body{
   font-family: sans-serif;
   background-color: #ffffff;
 }
 
-.card-container {
+.card-container{
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   margin: 30px 30px;
 }
 
-.card {
+.card{
   text-align: center;
   padding: 25px 10px 25px 10px;
-  width: 300px;
+  width: 600px;
   height: auto;
   margin: 0 10px;
   border: 1px solid #ccc;
@@ -99,4 +94,20 @@ body {
 
 .card p {
   font-size: 1em;
+}
+
+
+@keyframes fade_in{
+  from {left: 0px;}
+  to {align-self: center; }
+}
+
+
+.Dining_Description{
+  border: solid red 3px;
+  width:80%;
+  height: auto;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  margin: auto;
 }
