--- a/UX Offical/CSS/Resturant.css
+++ b/UX Offical/CSS/Resturant.css
@@ -84,9 +84,17 @@ body{
   box-shadow: 0 1px 3px #ccc;
 }
 
+.card:hover{
+  transform:scale(1.08);
+  transition: transform .5s;
+}
+
+
 .card img {
   width: 100%;
 }
+
+
 
 .card h2 {
   font-size: 1.5em;
@@ -110,4 +118,17 @@ body{
   padding-top: 10px;
   padding-bottom: 10px;
   margin: auto;
+}
+
+.book_button{
+  text-decoration: none;
+  color: black;
+  border: 3px;
+  padding: 10px;
+  background-color: #deebc6;
+}
+
+.book_button:hover{
+  color: black;
+  border: black solid 3px;
 }
