--- a/UX Offical/CSS/Resturant.css
+++ b/UX Offical/CSS/Resturant.css
@@ -131,6 +131,6 @@ body{
 }
 
 .book_button:hover{
-  color: black;
-  border: black solid 3.5px;
+  border: black solid 3px;
+  background-color: lightgray;
 }
