--- a/UX Offical/CSS/homepage.css
+++ b/UX Offical/CSS/homepage.css
@@ -20,15 +20,6 @@
     background-color: grey;
   }
 
-.igContainer{
-    display: inline-block;
-    vertical-align: top;
-    font-size: 24px;
-    font-weight: bold;
-    width: 100%;
-    margin-left: auto ;
-    margin-right: auto;
-}
 .searchbarcontainer{
     display: flex;
     align-items: center;
@@ -41,6 +32,7 @@
     border-radius: 5px;
     margin-top: -450px; 
     vertical-align: top;
+    flex-wrap: wrap;
 }
 
 .incontainer{
@@ -53,10 +45,26 @@
     padding-left: 30px;
     padding-right: 30px;
 }
+
 .textInPicture p{
     margin-bottom: 80px;
     color: white;
     font-size: 20px;
+  
+}
+.specialSpan{
+    font-size: 32px;
+    font-family: 'Playfair Display', serif;
+    display: flex;
+   
+    
+}
+.span{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;  
+    max-width: 70%;
 }
 .Bookingbutton{
   padding: 10px 20px;
@@ -72,12 +80,12 @@
 
 @media screen and (max-width: 768px){
     .searchbarcontainer{
-        margin-top: -350px;
-        display: flex;
+        margin-top: -500px;
         padding-right: 10px;
         right: 70px;
         padding: 10px;
         width: 80%;
+        
     }
     .bigimage img{
         height: 50%;
@@ -86,9 +94,11 @@
         margin-bottom: 80px;
         color: white;
         font-size: 16px;
-        margin-top: -30px;
+        margin-top: -40px;
         margin-left: 30px;
+     
     }
+
     .incontainer{
         margin-top: -55px;
         width: 59%;
