--- a/UX Offical/CSS/NewNavbar.css
+++ b/UX Offical/CSS/NewNavbar.css
@@ -81,7 +81,7 @@ a.active,a:hover{
     .checkboxbutton{
         display: block;
     }
-    ul{
+    nav ul{
         position: fixed;
         width: 100%;
         height: 100vh;
@@ -100,7 +100,7 @@ a.active,a:hover{
     nav ul li a{
         font-size: 20px;
         color: black;
-        margin-right: 50px;
+        margin-right: 0px;
        
     }
     a:hover,a.active{
