--- a/UX Offical/CSS/Resturantforms.css
+++ b/UX Offical/CSS/Resturantforms.css
@@ -1,16 +1,13 @@
 *{
-    margin: auto;
-    align-content: center;
-    justify-content: center;
+    padding: 0;
+    margin: auto;  
 }
 
+
 .form_container{
-    padding: auto;
-    width:90%;
+    width:80%;
     height: auto;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    border: solid red 3px;
-    margin: auto;
 }
 
 .form_title{
@@ -18,9 +15,6 @@
     text-align: center;
     margin-bottom: 10px;
     border-bottom: 3px solid black;
-    border: solid red 3px;
-    text-align: center;
-
 }
 
 .questions_container{
@@ -39,9 +33,8 @@ input[type="date"],
 input[type="number"],
 input[type="tel"],
 select,textarea{
-    text-align: center;
     height: auto;
-    width: 70%;
+    width: 90%;
     padding: 7px;
     border: 1px solid black;
     border-radius: 4px;
