--- a/UX Offical/CSS/Resturantforms.css
+++ b/UX Offical/CSS/Resturantforms.css
@@ -4,8 +4,9 @@
 }
 
 
+
 .form_container{
-    width:80%;
+    width:50%;
     height: auto;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
@@ -21,7 +22,7 @@
     margin-bottom: 20px;
 }
 
-label{
+.form_container label{
     display: block;
     font-weight: bold;
     margin-bottom: 5px;
@@ -58,5 +59,12 @@ input[type="submit"] {
 }
 
 footer{
-    border: solid red 3px;
+
+}
+
+
+@media screen and (max-width: 768px){
+    .form_container{
+        width: 70%;
+    }
 }
