--- a/UX Offical/CSS/Footer.css
+++ b/UX Offical/CSS/Footer.css
@@ -2,7 +2,7 @@ footer{
     height: 280px;
     width: 100%;
     margin-top: 300px;
-    utline: rgb(54, 228, 31) 3px solid;
+    
 }
 
 .section1_footer{
@@ -47,7 +47,7 @@ footer h1.title{
     color: black;
     font-size: 35px;
     display:inline-block ;
-    utline: blue 3px solid;
+    
     margin-bottom: 0px;
     width: 300px;
     padding-left: 20px;
@@ -81,3 +81,80 @@ footer h1.title{
 }
 
 
+.socialicon_container{
+    margin-left: 20px;
+    display: flex;
+    flex-direction: row;
+}
+
+.socialmediaiconfirst{  
+    width: 40px;
+    height: 100%;
+    border-radius: 50%;
+    border: black px solid;
+    display:block;
+    margin-left: 10px;
+}
+
+
+.socialmediaicon{  
+    width: 40px;
+    height: 100%;
+    border-radius: 50%;
+    border: black px solid;
+}
+
+.mainsocialmedia{
+    margin-top: 25px;
+    height: 40px;
+    flex: 4;
+}
+
+.contact_container{
+    display: flex;
+    flex-direction: column;
+}
+
+.contactlinks{
+    width: 400px;
+    margin: 0;
+    padding: 0;
+    text-decoration: none;
+}
+
+.contacttext{
+    color: black;
+    font-size: 20px;
+    margin-top: 15px;
+    margin-left: 30px;
+}
+
+.contacttextfirst{
+    color: black;
+    font-size: 20px;
+    margin-left: 30px;
+    margin-top: 15px;
+    font-family: 'Montserrat',Arial, Helvetica, sans-serif;
+}
+
+@media screen and (max-width: 425px){
+    .section1_footer{
+        overflow: hidden;
+    }
+    .contactlinks{
+        width:200px;
+        overflow: hidden;
+    }
+    .contacttext{
+        font-size:16px;
+    }
+    .copyrighttext{
+        font-size: 16px;
+    }
+    footer h1.title{
+        font-size: 22px;
+    }
+    .part2footer{
+        height:130px;
+    }
+}
