--- a/UX Offical/CSS/Footer.css
+++ b/UX Offical/CSS/Footer.css
@@ -1,15 +1,16 @@
+
 footer{
     height: 280px;
     width: 100%;
-    margin-top: 300px;
-    
+    /* margin-top: 300px; */
+    border: red 5px solid;
 }
 
 .section1_footer{
     height: 200px;
     width: 100%;
     background-color: #B28850;
-    margin-top: 300px;
+    /* margin-top: 300px; */
     display: flex;
 }
 
