--- a/UX Offical/CSS/Resturantforms.css
+++ b/UX Offical/CSS/Resturantforms.css
@@ -9,6 +9,7 @@
     width:50%;
     height: auto;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    border: red 5px solid;
 }
 
 .form_title{
@@ -58,9 +59,6 @@ input[type="submit"] {
     color:white;
 }
 
-footer{
-
-}
 
 
 @media screen and (max-width: 768px){
