--- a/UX Offical/CSS/Footer.css
+++ b/UX Offical/CSS/Footer.css
@@ -3,7 +3,8 @@ footer{
     height: 280px;
     width: 100%;
     /* margin-top: 300px; */
-    border: red 5px solid;
+
+    display: block;
 }
 
 .section1_footer{
@@ -141,6 +142,7 @@ footer h1.title{
 @media screen and (max-width: 425px){
     .section1_footer{
         overflow: hidden;
+        
     }
     .contactlinks{
         width:200px;
