--- a/UX Offical/CSS/Resturantforms.css
+++ b/UX Offical/CSS/Resturantforms.css
@@ -3,15 +3,15 @@
     margin: auto;  
 }
 
+
+
 .form_container{
-    width: 100%;
+    width:50%;
     height: auto;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    
 }
 
 .form_title{
-    
     margin-top: 20px;
     text-align: center;
     margin-bottom: 10px;
@@ -20,15 +20,12 @@
 
 .questions_container{
     margin-bottom: 20px;
-    justify-content: center;
-    display: flex;
 }
 
 .form_container label{
-    /* display: block; */
+    display: block;
     font-weight: bold;
     margin-bottom: 5px;
-    float: left;
 }
 
 input[type="text"],
@@ -37,7 +34,6 @@ input[type="date"],
 input[type="number"],
 input[type="tel"],
 select,textarea{
-    
     height: auto;
     width: 90%;
     padding: 7px;
@@ -62,10 +58,13 @@ input[type="submit"] {
     color:white;
 }
 
+footer{
+
+}
 
 
 @media screen and (max-width: 768px){
     .form_container{
-        width: 100%;
+        width: 70%;
     }
 }
