--- a/UX Offical/CSS/RestaurantPages123.css
+++ b/UX Offical/CSS/RestaurantPages123.css
@@ -17,11 +17,17 @@
 }
 
 
-.Main_container h2{
+.Main_container h1{
     margin: auto;
     text-align: center;
     padding: 10px;
     width: 200px;
     border-bottom: solid black 3px;
+    
+}
+
+.Main_container p{
+    font-family: Arial, Helvetica, sans-serif;
+    padding-top: 10px;
 }
 
