--- a/UX Offical/CSS/RestaurantPages123.css
+++ b/UX Offical/CSS/RestaurantPages123.css
@@ -29,5 +29,15 @@
 .Main_container p{
     font-family: Arial, Helvetica, sans-serif;
     padding-top: 10px;
+    font-size: 20px;
+    padding-bottom:  30px;
 }
 
+
+.ReserveButton{
+    border: black 3px solid;
+    padding: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+    text-decoration: none;
+    color: black;
+}
