--- a/UX Offical/CSS/RestaurantPages123.css
+++ b/UX Offical/CSS/RestaurantPages123.css
@@ -12,8 +12,9 @@
 }
 
 .Main_container{
-    border: solid red 10px;
     text-align: center;
+    background-color: white;
+    margin-bottom:100px ;
 }
 
 
@@ -34,10 +35,16 @@
 }
 
 
-.ReserveButton{
+.Main_container a{
     border: black 3px solid;
     padding: 10px;
     font-family: Arial, Helvetica, sans-serif;
     text-decoration: none;
+    background-color: white;
     color: black;
+}
+
+.Main_container a:hover{
+    color: goldenrod;
+    border: goldenrod 3px solid;
 }
