--- a/UX Offical/CSS/Resturantforms2.css
+++ b/UX Offical/CSS/Resturantforms2.css
@@ -19,7 +19,9 @@
   padding: 25px 30px;
   border-radius: 5px;
   box-shadow: 0 5px 10px rgba(0,0,0,0.15);
+  margin-top: 50px;
   margin-bottom: 50px;
+  
 }
 .form_container .form_title{
   font-size: 25px;
