--- a/UX Offical/CSS/Resturant.css
+++ b/UX Offical/CSS/Resturant.css
@@ -135,8 +135,11 @@ body{
 }
 .Restaurant_Text_Intro{
   text-align: center;
-  text-decoration: underline;
+  /* text-decoration: underline; */
   padding-top:30px;
+  width: 500px;
+  margin:auto ;
+  border-bottom: 4px solid black;
 }
 
 .Dining_Description{
@@ -178,7 +181,7 @@ body{
     width: 90%;
     max-width: 500px;
 
-   
+    aspect-ratio: 1/1;
     max-height: 400px;
   }
 
@@ -209,5 +212,8 @@ body{
     max-height: 400px;
     margin-left: 0;
     padding-left: 0;
+  }
+  .Restaurant_Text_Intro{
+    width: 280px;
   }
 }
