--- a/UX Offical/CSS/Payment_pages_stylesheet2.css
+++ b/UX Offical/CSS/Payment_pages_stylesheet2.css
@@ -188,6 +188,7 @@
     border-radius: 2.5px;
     float: right;
     background-color: #D3D3D3;
+    margin-bottom: 300px;
 }
 
 h1.information_header{
@@ -222,12 +223,12 @@ h1.information_header{
 /* Main Container to store all four rooms display */
 
 .container_rooms_selections{
-    utline: auto;
     width: 53%;
     height: 1000px;
     margin-left: 90px;
     margin-top: 150px;
-    float: left;
+    margin-bottom: 700px;
+    display: inline-block;
 }
 
 /* 1st Room container */  
