--- a/UX Offical/CSS/Footer.css
+++ b/UX Offical/CSS/Footer.css
@@ -10,7 +10,7 @@ footer{
 .section1_footer{
     height: 200px;
     width: 100%;
-    background-color: #B28850;
+    background-color: #D78030;
     /* margin-top: 300px; */
     display: flex;
 }
@@ -61,7 +61,7 @@ footer h1.title{
     width: 100%;
     height: 80px;
     
-    background-color: #B28850;
+    background-color: #D78030;
     border-top: solid 6px #925030;
 }
 
