--- a/UX Offical/CSS/Payment_pages_stylesheet3.css
+++ b/UX Offical/CSS/Payment_pages_stylesheet3.css
@@ -219,3 +219,111 @@ h1.information_header{
     margin-top: 15px;
     margin-left: 20px;
 }
+
+
+
+/* Main Container to store all four rooms display */
+
+.container_guest_info_form{
+    width: 53%;
+    height: 1000px;
+    margin-left: 90px;
+    margin-top: 150px;
+    margin-bottom: 700px;
+    display: inline-block;
+    outline: auto;
+}
+
+/* Guest Infomation Form */
+
+.form_guest_info_header{
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+.guest_info_form{
+
+}
+
+.guest_info_input_fullname{
+    display: block;
+    width: 230px;
+    height: 40px;
+    margin-bottom: 20px ;
+    border: 2.5px black solid;
+    border-radius: 4px;
+    padding: 10px;
+    font-size: 20px;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.guest_info_input_phonenumber{
+    display: block;
+    width: 230px;
+    height: 40px;
+    margin-bottom: 20px ;
+    border: 2.5px black solid;
+    border-radius: 4px;
+    padding: 10px;
+    font-size: 20px;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.guest_info_input_email{
+    display: block;
+    width: 230px;
+    height: 40px;
+    margin-bottom: 20px ;
+    border: 2.5px black solid;
+    border-radius: 4px;
+    padding: 10px;
+    font-size: 20px;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#visa {
+    width: 80px;
+    position: relative;
+    top: 15px;
+}
+
+#mastercard {
+    width: 65px;
+    position: relative;
+    top: 20px;
+}
+
+#americanexp {
+    width: 60px;
+    position: relative;
+    top: 22px;
+}
+
+.visaoption {
+    display: inline-block;
+    margin-right: 50px;
+}
+
+.masteroption {
+    display: inline-block;
+    margin-right: 50px;
+}
+
+.americanoption {
+    display: inline-block;
+    margin-bottom: 20px;
+}
+
+.circlebutton {
+    background-color: black;
+}
+
+.paymentdiv {
+    margin-top: 35px;
+}
