--- a/UX Offical/CSS/homepage.css
+++ b/UX Offical/CSS/homepage.css
@@ -47,7 +47,7 @@
 }
 
 .textInPicture p{
-    margin-bottom: 80px;
+    margin-bottom: 60px;
     color: white;
     font-size: 20px;
   
@@ -77,7 +77,7 @@
 }
 
 
-
+ 
 @media screen and (max-width: 768px){
     .searchbarcontainer{
         margin-top: -500px;
@@ -244,7 +244,9 @@
     padding:20px;
     border: none;
 }
-
+.Bookingbutton:hover{
+    background-color: grey
+}
 .aboutus button:hover{
     background-color: grey;
 }
